syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.services";
option java_multiple_files = true;

package services;

import "requests/health-service/upload-fitness-data-request.proto";

import "defaults/empty.proto";

service HealthService {
  rpc UploadFitnessData(requests.UploadFitnessDataRequest) returns (defaults.Empty) {}
}
